[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Car.gd" type="Script" id=1]
[ext_resource path="res://Materials/car.png" type="Texture" id=2]
[ext_resource path="res://Materials/wheel.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -9.6, -2, -8.5, -10.2, 6.3, -10.2, 8.2, -5, 9.6, -3.3, 9.6, -2.5, 10.1, -2.3, 10.1, 3.5, 9.5, 6.2, 6, 6.8, -9.8, 8 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CircleShape2D" id=4]

[node name="Car" type="Node2D"]
position = Vector2( -11734.2, 377.549 )
script = ExtResource( 1 )

[node name="Body" type="RigidBody2D" parent="."]
position = Vector2( 5, 0 )
collision_mask = 62
mass = 100.0
contacts_reported = 10
contact_monitor = true
can_sleep = false

[node name="BodyCollision" type="CollisionShape2D" parent="Body"]
scale = Vector2( 4.55, 1.55 )
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="Body"]
show_behind_parent = true
scale = Vector2( 0.18, 0.13 )
texture = ExtResource( 2 )
region_rect = Rect2( 324.109, 134.738, 82.0219, 112.24 )

[node name="FrontWheel" type="RigidBody2D" parent="."]
position = Vector2( 20, 15 )
collision_mask = 62
mass = 30.0
contacts_reported = 2
contact_monitor = true
can_sleep = false

[node name="FrontWheelCollision" type="CollisionShape2D" parent="FrontWheel"]
shape = SubResource( 2 )

[node name="FrontWheelSprite" type="Sprite" parent="FrontWheel"]
scale = Vector2( 0.024, 0.024 )
texture = ExtResource( 3 )

[node name="RearWheel" type="RigidBody2D" parent="."]
position = Vector2( -20, 15 )
collision_mask = 62
mass = 30.0
contacts_reported = 2
contact_monitor = true
can_sleep = false

[node name="RearWheelCollision" type="CollisionShape2D" parent="RearWheel"]
material = SubResource( 3 )
shape = SubResource( 4 )

[node name="RearWheelSprite" type="Sprite" parent="RearWheel"]
self_modulate = Color( 1, 0.996078, 0.996078, 1 )
scale = Vector2( 0.024, 0.024 )
texture = ExtResource( 3 )
region_rect = Rect2( 106.098, 19.3761, 47.9341, 39.945 )

[node name="FrontAxis" type="GrooveJoint2D" parent="."]
position = Vector2( 20, 15 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../Body")
node_b = NodePath("../FrontWheel")
length = 5.0
initial_offset = 1.0

[node name="RearAxis" type="GrooveJoint2D" parent="."]
position = Vector2( -20, 15 )
scale = Vector2( 0.1, 0.1 )
node_a = NodePath("../Body")
node_b = NodePath("../RearWheel")
length = 5.0
initial_offset = 1.0
[connection signal="body_entered" from="Body" to="." method="_on_body_entered"]
[connection signal="body_entered" from="FrontWheel" to="." method="_on_body_entered"]
[connection signal="body_entered" from="RearWheel" to="." method="_on_body_entered"]
